# GnomeGame

./: CMakeLists.txt  GameApp.cpp  GameApp.h  main.cpp  pch.h
GameLib/: Background.cpp  Background.h  BackgroundDeclaration.cpp  BackgroundDeclaration.h  CMakeLists.txt  CollisionVisitor.cpp  CollisionVisitor.h  CopyVisitor.h  Declaration.h  Door.cpp  Door.h  DoorDeclaration.cpp  DoorDeclaration.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Item.cpp  Item.h  ItemVisitor.h  Level.cpp  Level.h  Loan.cpp  Loan.h  LoanDeclaration.cpp  LoanDeclaration.h  MainFrame.cpp  MainFrame.h  Money.cpp  Money.h  MoneyDeclaration.cpp  MoneyDeclaration.h  Platform.cpp  Platform.h  PlatformDeclaration.cpp  PlatformDeclaration.h  Scoreboard.cpp  Scoreboard.h  SpartyGnome.cpp  SpartyGnome.h  (+16 more)
Tests/: CMakeLists.txt  EmptyTest.cpp  GameTest.cpp  ItemTest.cpp  PlatformTest.cpp  VillainTest.cpp  WallTest.cpp
levels/: level0.xml  level2.xml  level3.xml
